allow model selection
